--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   build:
     # El nombre del archivo es Greeting
-    name: Greeting
+    name: Build
     # Este archivo se ejecuta en Linux
     runs-on: ubuntu-latest
     steps:
