--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -11,5 +11,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '10.x'
-      - run: npm install
-      - run: npm run build
+        run: |
+          npm install
+          npm run build
