--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -8,6 +8,7 @@ jobs:
     # Este archivo se ejecuta en Linux
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
     - name: Setup node
       uses: actions/setup-node@v1
       with:
