--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An online chess website",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "build": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aveek Saha",
